--- a/app/src/main/res/layout/item_wx_daily.xml
+++ b/app/src/main/res/layout/item_wx_daily.xml
@@ -19,7 +19,7 @@
             android:text="asdf"/>
 
         <ImageView
-            android:id="@+id/wx_icon"
+            android:id="@+id/wx_day_icon"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:src="@drawable/ic_sunny"/>
