--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/activityBackgoround"
     tools:context="com.thompson.darkskydemo.activities.MainActivity">
 
     <include layout="@layout/item_wx_current"/>
