--- a/app/src/main/res/layout/item_wx_daily.xml
+++ b/app/src/main/res/layout/item_wx_daily.xml
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
             android:textSize="24sp"
-            android:text="asdf"
+            android:text="Mon"
+            android:textStyle="bold"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
 
